fix media queries for better spacing/stacking

--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@
  flex-direction: column;
  gap: 30px;
  width: 200px;
+ padding-top: 80px;
 }
 
 #colorPicker {
@@ -77,7 +78,7 @@
     background-color: var(--primary-dark);
     color: var(--primary-light);
     transform: scale(1.05);
-  }
+}
 
 
 
@@ -155,17 +156,19 @@ margin-right: auto;
 @media (max-width: 1200px) {
     .main-container {
       justify-content: center;
+        gap: 50px;
     }
   }
 
 @media (max-width: 850px) {
     .main-container {
-      gap: 50px;
-    }
-  
+        flex-direction: column-reverse;
+        align-items: center;
+      }
     .settings {
       width: 150px;
       gap: 16px;
+      padding-top: 0;
     }
   
     /* .size-value {
@@ -178,16 +181,10 @@ margin-right: auto;
     }
   }
 
-@media (max-width: 768px) {
+@media (max-width: 650px) {
     .title {
       font-size: 50px;
     }
-  
-    .main-container {
-      flex-direction: column-reverse;
-      align-items: center;
-    }
-  
     .grid {
       width: 300px;
       height: 300px;
